# slambook2

./: .gitignore
ch2/: CMakeLists.txt
ch2/include/: libHelloSLAM.h
ch2/src/: libHelloSLAM.cpp  useHello.cpp
ch3/examples/: CMakeLists.txt  exercises.cpp
ch3/useEigen/: CMakeCache.txt  Makefile  cmake_install.cmake  eigenMatrix  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch6/: CMakeLists.txt
